# simple-repl

./: README.md  simple-repl.cabal
docs/: Repl-String.html  Repl-Text.html  Repl.html  doc-index.html  index.html  mini_Repl-String.html  mini_Repl-Text.html  mini_Repl.html  simple-repl.haddock  simple-repl.txt
docs/src/: Example.html  Repl.String.html  Repl.Text.html  Repl.html
example/: Example.hs
src/: Example.hs  Repl.hs
src/Repl/: String.hs  Text.hs
