name:                simple-repl
version:             0.2.0.0
homepage:            https://github.com/jean-lopes/simple-repl#readme
license:             MIT
license-file:        LICENSE
author:              Jean Carlo Giambastiani Lopes
maintainer:          jean.lopes@hotmail.com.br
copyright:           2017 Jean Carlo Giambastiani Lopes
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src                      
  exposed-modules:     Repl, Repl.String, Repl.Text
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/simple-repl
